# yolo26seg-skripsi

./: .gitignore  AGENTS.md  CLAUDE.md  data.py  main.py  predict.py  pyproject.toml  train.py
