[project]
name = "stardist-skripsi"
version = "0.1.0"
description = "StarDist nucleus segmentation trained on PanNuke"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "stardist",
    "tensorflow>=2.10",
    "datasets",
    "numpy",
    "csbdeep",
    "tifffile",
    "tqdm",
    "Pillow",
]

[project.scripts]
stardist-skripsi = "main:main"
